--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Nav -->
 <nav id="nav">
     <ul class="container">
-        <li><a href="#Tahseen">Tahseen</a></li>
+        <li><a href="#Riya">Riya</a></li>
         <li><a href="#experiences">Experiences</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#projects">Projects</a></li>
