--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="col-8 col-7-large col-12-medium">
                 <header>
-                    <h1>Hi. I'm <strong>Tahseen Hameed</strong>.</h1>
+                    <h1>Hi. I'm <strong>Riya Moitra</strong>.</h1>
                 </header>
                 <p>*Cool things about Me*</p>
                 <p>Skilled in <strong>Java</strong>, <strong>Python</strong>, <strong>C++</strong></p>
