--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="row">
             <div class="col-4 col-5-large col-12-medium">
-                <span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+                <span class="image fit"><img src="images/im-2.jpg" alt="" /></span>
             </div>
             <div class="col-8 col-7-large col-12-medium">
                 <header>
@@ -57,9 +57,9 @@
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
                     <span class="fa fa-briefcase fa-3x"></span>
-                    <h3>NCR Corporation</h3>
+                    <h3>Larsen and Toubro Infotech</h3>
                     <h4>Software Engineer</h4>
-                    <h5>Hyderabad, India</h5>
+                    <h5>Mumbai, India</h5>
                     <p>*Brief Description of work experience*</p>
                 </section>
             </div>
@@ -80,17 +80,17 @@
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
                     <span class="fa fa-graduation-cap fa-3x"></span>
-                    <h3>Masters in Computer Science</h3>
+                    <h3>Masters in Information Systems</h3>
                     <h4>Northeastern University, Boston</h4>
-                    <p>Relevant Courses: Programming Design Paradigms, Web Development, Algorithms, Information Retrieval</p>
+                    <p>Relevant Courses: Concepts of Object-Oriented Design, Application Engineering Develpment ,Data Science Tools and Methods</p>
                 </section>
             </div>
             <div class="col-4 col-6-medium col-12-small">
                 <section class="box style1">
                     <span class="fa fa-graduation-cap fa-3x"></span>
-                    <h3>Bachelors in Information Technology</h3>
-                    <h4>Osmania University, India</h4>
-                    <p>Relevant Courses: Operating Systems, DBMS, Data Structures, Software Engineering</p>
+                    <h3>Bachelors in Electronics Engineering</h3>
+                    <h4>University of Mumbai, India</h4>
+                    <p>Relevant Courses: StructuredProgrammingApproach,Objectorientedprogrammingmethodology,ComputerOrganization</p>
                 </section>
             </div>
         </div>
